[package]
name = "libafl_tracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type   = ["cdylib"]
name = "SymRuntime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symcc_runtime = "0.1"
libafl = "0.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
